[package]
name = "axum-app"
version = "0.1.0"
edition = "2024"

[dependencies]
axum =  { version = "0.8.3"}
hyper = { version = "1.0", features = ["server", "http1", "http2"] }
tokio = { version = "1.44.1", features = ["full"] }
tower = "0.5.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
