[package]
name = "axum_db"
version = "0.1.0"
edition = "2024"

[dependencies]
axum="0.8.4"
tokio={version="1",features = ["full"]}
serde={version = "1.0.219",features = ["derive"]}
serde_json="1"
uuid={version = "1",features = ["v4"]}
sqlx={version = "0.8.6",features = ["runtime-tokio-native-tls","tls-rustls","postgres","uuid"]}
dotenvy="0.15.7"