[package]
name = "axum_sqlx_demo"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
tokio = {version="1.48.0",features=["full"]}
serde = {version = "1.0.228",features =["derive"] }
serde_json = "1.0.145"
sqlx = {version="0.8.6",features=["runtime-tokio-rustls","postgres","macros"]}
tower-http = {version="0.6.6",features=["trace"]}
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
dotenvy = "0.15.7"
